--- a/src/utils/markdown.css
+++ b/src/utils/markdown.css
@@ -103,7 +103,7 @@
 .markdown-body kbd,
 .markdown-body pre {
   font-family: monospace, monospace;
-  font-size: 1em;
+  font-size: 1rem;
 }
 
 .markdown-body hr {
